--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,32 @@ steps:
       versionSpec: "10.x"
     displayName: "Install Node.js"
 
-  - script: |
-      npm install
-      npm run build
-    displayName: "npm install and build"
+    ## Copy the client to the staging directory
+- task: CopyFiles@2
+  inputs:
+    sourceFolder: '$(buildOutputFolder)' 
+    contents: '**/*' 
+    targetFolder: '$(Build.ArtifactStagingDirectory)'
+    cleanTargetFolder: true
 
-  - task: PublishBuildArtifacts@1
-    inputs:
-      pathtoPublish: $(build.artifactstagingdirectory) # dist or build files
+## Archive the files into a zip file for publishing
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: $(Build.ArtifactStagingDirectory)
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    includeRootFolder: false
+
+## Publish the zip file
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+
+  # - script: |
+  #     npm install
+  #     npm run build
+  #   displayName: "npm install and build"
+
+  # - task: PublishBuildArtifacts@1
+  #   inputs:
+  #     pathtoPublish: $(build.artifactstagingdirectory) # dist or build files
