--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,13 +21,13 @@ steps:
     displayName: "npm install and build"
 
   – task: CopyFiles@2
-    displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+    displayName: "Copy Files to: $(Build.ArtifactStagingDirectory)"
     inputs:
-      SourceFolder: '$(System.DefaultWorkingDirectory)/build'
-      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      SourceFolder: "$(System.DefaultWorkingDirectory)/build"
+      TargetFolder: "$(Build.ArtifactStagingDirectory)"
 
   – task: PublishBuildArtifacts@1
-      displayName: 'Publish Artifact: drop'
+      displayName: "Publish Artifact: drop"
 
     ## Copy the client to the staging directory
   # - task: CopyFiles@2
