--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,13 +20,13 @@ steps:
       npm run build
     displayName: "npm install and build"
 
-  – task: CopyFiles@2
+  - task: CopyFiles@2
     displayName: "Copy Files to: $(Build.ArtifactStagingDirectory)"
     inputs:
       SourceFolder: "$(System.DefaultWorkingDirectory)/build"
       TargetFolder: "$(Build.ArtifactStagingDirectory)"
 
-  – task: PublishBuildArtifacts@1
+  - task: PublishBuildArtifacts@1
       displayName: "Publish Artifact: drop"
 
     ## Copy the client to the staging directory
