--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ trigger:
 pool:
   vmImage: "ubuntu-latest"
 
+variables:
+  projectFolder: "src"
+  buildOutputFolder: "public"
+
 steps:
   - task: NodeTool@0
     inputs:
@@ -21,14 +25,20 @@ steps:
     displayName: "npm install and build"
 
   - task: CopyFiles@2
+    inputs:
+      sourceFolder: "$(buildOutputFolder)"
+      contents: "**/*"
+      targetFolder: "$(Build.ArtifactStagingDirectory)/drop"
+      cleanTargetFolder: true
+
+  - task: CopyFiles@2
     displayName: "Copy Files to: $(Build.ArtifactStagingDirectory)"
     inputs:
-      SourceFolder: "$(System.DefaultWorkingDirectory)/build"
+      SourceFolder: "$(buildOutputFolder)"
       TargetFolder: "$(Build.ArtifactStagingDirectory)"
 
   - task: PublishBuildArtifacts@1
-      displayName: "Publish Artifact: drop"
-
+    displayName: "Publish Artifact: drop"
     ## Copy the client to the staging directory
   # - task: CopyFiles@2
   #   inputs:
@@ -36,7 +46,6 @@ steps:
   #     contents: "**/*"
   #     targetFolder: "$(Build.ArtifactStagingDirectory)"
   #     cleanTargetFolder: true
-
   # ## Archive the files into a zip file for publishing
   # - task: ArchiveFiles@2
   #   inputs:
@@ -44,7 +53,6 @@ steps:
   #     archiveType: "zip"
   #     archiveFile: "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
   #     includeRootFolder: false
-
   # ## Publish the zip file
   # - task: PublishBuildArtifacts@1
   #   inputs:
