--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
     inputs:
       pathtoPublish: "$(Build.ArtifactStagingDirectory)"
       artifactName: "myWebsiteName"
-    ## Copy the client to the staging directory
+    ### Copy the client to the staging directory
   # - task: CopyFiles@2
   #   inputs:
   #     sourceFolder: "$(buildOutputFolder)"
