--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
 
   - task: PublishBuildArtifacts@1
     inputs:
-      pathtoPublish: $(build.artifactstagingdirectory) # dist or build files
+      pathtoPublish: $(build.artifactstagingdirectory) # dist or build filess
 
   - task: CopyFiles@2
     inputs:
