--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,51 +10,28 @@ pool:
   vmImage: "ubuntu-latest"
 
 variables:
-  # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: "71d18f85-881b-44b7-8605-cc3ad719d866"
-
-  # Web app name
-  webAppName: "ReservationsRocoto"
-
-  # Environment name
-  environmentName: "ReservationsRocoto"
-
-  # Agent VM image name
-  vmImageName: "ubuntu-latest"
+  projectFolder: "src"
+  buildOutputFolder: "build"
 
 steps:
-  - task: NodeTool@0
-    inputs:
-      versionSpec: "10.x"
-    displayName: "Install Node.js"
-
   - script: |
-      npm install
-      npm run build
-    displayName: "npm install and build"
+      pushd $(projectFolder) && npm install && popd
+      pushd $(projectFolder) && npm run build && popd
+
+  - task: CopyFiles@2
+    inputs:
+      sourceFolder: "$(buildOutputFolder)"
+      contents: "**/*"
+      targetFolder: "$(Build.ArtifactStagingDirectory)"
+      cleanTargetFolder: true
 
   - task: ArchiveFiles@2
-    displayName: "Archive files"
     inputs:
-      rootFolderOrFile: "$(System.DefaultWorkingDirectory)"
+      rootFolderOrFile: $(Build.ArtifactStagingDirectory)
+      archiveType: "zip"
+      archiveFile: "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
       includeRootFolder: false
-      archiveType: zip
-      archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      replaceExistingArchive: true
 
-  - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-    artifact: drop
-
-  - task: AzureRmWebAppDeployment@4
-    displayName: "Azure App Service Deploy: ReservationsRocoto"
+  - task: PublishBuildArtifacts@1
     inputs:
-      azureSubscription: $(azureSubscription)
-      appType: webAppLinux
-      WebAppName: $(webAppName)
-      packageForLinux: "$(Pipeline.Workspace)/drop/$(Build.BuildId).zip"
-      RuntimeStack: "NODE|10.10"
-      StartupCommand: "npm run start"
-      ScriptType: "Inline Script"
-      InlineScript: |
-        npm install
-        npm run build --if-present
+      pathtoPublish: "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
