--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,12 @@
 trigger:
   - master
 
+resources:
+  - repo: self
+    fetchDepth: 1
+
 pool:
-  vmImage: "ubuntu-latest"
+  vmImage: "ubuntu 16.04"
 
 variables:
   projectFolder: "src"
