--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,10 @@ pool:
   vmImage: "ubuntu 16.04"
 
 steps:
-  - task: CopyFiles@2
+  - label: ":hammer: Tests"
     command: echo "$(buildOutputFolder)"
+
+  - task: CopyFiles@2
     displayName: "Copy files to compile folder"
     inputs:
       sourceFolder: "$(buildOutputFolder)"
